[package]
name = 'pallet-jton_rps'
version = '0.1.0'
description = 'Jeton Network pallet rps'
authors = ['Jeton Network <https://github.com/JetonNetwork>']
edition = '2018'
homepage = 'https://jeton.network'
license = 'Apache-2.0'
repository = 'https://github.com/JetonNetwork/pallet-jton-rps/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}

# primitives
sp-std = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-runtime = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
sp-io = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-system = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

# external pallets
pallet-matchmaker = {default-features = false, version = '0.1.0', git = 'https://github.com/integritee-network/pallet-jton-matchmaker.git'}

[dev-dependencies]
serde = '1.0.119'
sp-core = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
frame-support-test = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}
pallet-scheduler = {default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'master'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-io/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-matchmaker/std',
]
try-runtime = ['frame-support/try-runtime']
