[package]
name = 'pallet-jton_rps'
version = '0.1.0'
description = 'Jeton Network pallet rps'
authors = ['Jeton Network <https://github.com/JetonNetwork>']
edition = '2018'
homepage = 'https://jeton.network'
license = 'Apache-2.0'
repository = 'https://github.com/JetonNetwork/pallet-jton-rps/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# primitives
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

# Substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

[features]
default = ['std']

std = [
	'codec/std',
	'scale-info/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-io/std',
	'frame-support/std',
	'frame-system/std',
]

